Solved Scrollbar and added a CMS

--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -30,7 +30,7 @@
     top: 0%;
     right: 0%;
     /* transform: scale3d(0, 0, 0); */
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
     transition: transform 0.3s;
 }
 
@@ -50,7 +50,7 @@
     position: fixed;
     top: 0%;
     right: 0%;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
 }
 
 .scrollbar-down {
@@ -61,7 +61,7 @@
     position: fixed;
     bottom: 0%;
     right: 0%;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
 }
 
 .ssb_down {
